--- a/practicearea.html
+++ b/practicearea.html
@@ -148,11 +148,29 @@
           </div>
         </div>
       </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/bookimg.png" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
+            <br>  <p></p>
+          </div>
+        </div>
+      </li>
        <li class="col-lg-4 col-md-6">
         <div class="practice_box">
           <div class="practiceImg"><img src="images/cannabis_law.png" alt=""></div>
           <div class="practice_section">
             <h3><a href="cannabis_law.html"><b>Cannabis Law</b></a></h3>
+            <br>  <p></p>
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/bookimg.png" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
             <br>  <p></p>
           </div>
         </div>
