--- a/practicearea.html
+++ b/practicearea.html
@@ -141,7 +141,7 @@
       </li>
       <li class="col-lg-4 col-md-6">
         <div class="practice_box">
-          <div class="practiceImg"><img src="images/bookimg.png" alt=""></div>
+          <div class="practiceImg"><img src="images/law_tort.jpg" alt=""></div>
           <div class="practice_section">
             <h3><a href="tort.html"><b>Tort Law</b></a></h3>
             <br>  <p></p>
@@ -152,7 +152,7 @@
         <div class="practice_box">
           <div class="practiceImg"><img src="images/cannabis_law.png" alt=""></div>
           <div class="practice_section">
-            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
+            <h3><a href="cannabis_law.html"><b>Cannabis Law</b></a></h3>
             <br>  <p></p>
           </div>
         </div>
@@ -161,7 +161,7 @@
         <div class="practice_box">
           <div class="practiceImg"><img src="images/law_tort.jpg" alt=""></div>
           <div class="practice_section">
-            <h3><a href="cannabis_law.html"><b>Cannabis Law</b></a></h3>
+            <h3><a href="cannabis_law.html"><b>Tort Law</b></a></h3>
             <br>  <p></p>
           </div>
         </div>
