--- a/cannabis_law.html
+++ b/cannabis_law.html
@@ -20,6 +20,15 @@
 <link href="css/style.css" rel="stylesheet"  id="colors">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <title>David A. Reid Paralegal Associate Browne & Associates Legal Services</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9NELGGVBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H9NELGGVBY');
+</script>
 </head>
 <body>
 
@@ -28,15 +37,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <p><i class="fas fa-envelope"></i> david@browneandassociates.ca</p>
+        <p><i class="fas fa-envelope"></i><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;"> david@browneandassociates.ca</a></p>
       </div>
       <div class="col-lg-6 col-md-6">
         <div class="social-media"> <span>Follow Us:</span>
           <ul>
-            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>       --> 
+<!--            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>          --> 
+            <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>        --> 
           </ul>
         </div>
       </div>
@@ -60,7 +69,9 @@
               <div class="conInfo phonewrp"><span>Call Us Now</span> <a href="tel:9056885598">(905) 688-5598</a></div>
             </li>
             <li>
-              <div class="conInfo addressWrp"><span>Address</span> 71 King St #201, St. Catharines, ON</div>
+              <div class="conInfo addressWrp"><span>Address</span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></div>
             </li>
           </ul>
         </div>
@@ -79,7 +90,7 @@
               -->
               <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
-            <div class="quote-btn"><a href="#">Get A Quote</a></div>
+            <div class="quote-btn"><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;">Get A Quote</a></div>
           </div>
         </nav>
       </div>
@@ -158,20 +169,20 @@
           <div class="title">
             <h1>Cannabis Law</span></h1>
           </div>
-          <p>The Ontario Government has put rules in place to keep cannabis out of the hands of children and youth, keep our roads safe and combat the illegal market.</p>
-          <p>After extensive public and stakeholder engagement, we now have laws in place about how, where and who can buy and possess cannabis in the province.</p>
-          <p>We are also moving forward with a tightly regulated private retail model for cannabis that will launch by April 1, 2019.</p>
-          <p>You must be <b>19 and older</b> to buy, use, possess and grow <b>recreational</b> cannabis. This is the same as the minimum age for the sale of tobacco and alcohol in Ontario.</p>
-          <p>The government has enacted the following rules for using cannabis, both medical and recreational.
-          <p><b>Where you can smoke and vape cannabis</b></p>
-          <ui>
+          <p style="font-size:1vw;  color:black;">The Ontario Government has put rules in place to keep cannabis out of the hands of children and youth, keep our roads safe and combat the illegal market.</p>
+          <p style="font-size:1vw;  color:black;">After extensive public and stakeholder engagement, we now have laws in place about how, where and who can buy and possess cannabis in the province.</p>
+          <p style="font-size:1vw;  color:black;">We are also moving forward with a tightly regulated private retail model for cannabis that will launch by April 1, 2019.</p>
+          <p style="font-size:1vw;  color:black;">You must be <b>19 and older</b> to buy, use, possess and grow <b>recreational</b> cannabis. This is the same as the minimum age for the sale of tobacco and alcohol in Ontario.</p>
+          <p style="font-size:1vw;  color:black;">The government has enacted the following rules for using cannabis, both medical and recreational.
+          <p style="font-size:1vw;  color:black;"><b>Where you can smoke and vape cannabis</b></p>
+          <ui style="font-size:1vw;  color:black;">
             <li>Private residences – this does not include residences that are also workplaces (for example, long-term care and retirement homes)</li>
             <li>Many outdoor public places (for example, sidewalks and parks)</li>
             <li>Designated smoking guest rooms in hotels, motels and inns</li>
             <li>Residential vehicles and boats that meet certain criteria (for example, if they have permanent sleeping accommodations and cooking facilities, and are parked or anchored)</li>
             <li>Scientific research and testing facilities (if the cannabis use is for scientific research and testing purposes)</li>
             <li>Controlled areas in:
-            <ui>
+            <ui style="font-size:1vw;  color:black;">
                 <li>long-term care homes</li>
                 <li>certain retirement homes</li>
                 <li>residential hospices</li>
@@ -180,11 +191,11 @@
             </ui>
           </ui>
           <br>
-          <p><b>Where you cannot smoke or vape cannabis</b></p>
+          <p style="font-size:1vw;  color:black;"><b>Where you cannot smoke or vape cannabis</b></p>
 
-          <p><b>Indoors</b></p>
-          <p>You cannot smoke or vape cannabis in:</p>
-          <ui>
+          <p style="font-size:1vw;  color:black;"><b>Indoors</b></p>
+          <p style="font-size:1vw;  color:black;">You cannot smoke or vape cannabis in:</p>
+          <ui style="font-size:1vw;  color:black;">
                 <li>indoor common areas in condos, apartment buildings and university/college residences</li>
                 <li>enclosed public places and enclosed work places</li>
                 <li>non-designated guest rooms in hotels, motels and inns</li>
@@ -197,31 +208,31 @@
 </div>
 
         <div style=" float: left;  width: 50%;  padding: 60px;  height: 300px;">
-          <h6><b>Schools and places where children gather</b></h6>
-          <h6>You cannot smoke or vape cannabis:</h6>
-          <ui>
+          <p style="font-size:1vw;  color:black;"><b>Schools and places where children gather</b></p>
+          <p style="font-size:1vw;  color:black;">You cannot smoke or vape cannabis:</p>
+          <ui style="font-size:1vw;  color:black;">
                 <li>at school, on school grounds, and all public areas within 20 metres of these grounds</li>
                 <li>on children’s playgrounds and public areas within 20 metres of playgrounds</li>
                 <li>in child care centres or where an early years program is provided</li>
                 <li>in places where home child care is provided — even if children aren’t present</li>
           </ui>
           <br>
-          <h6><b>Hospitals, hospices, care homes and other facilities</b></h6>
-          <h6>You cannot smoke or vape cannabis:</h6>
-          <ui>
+          <p style="font-size:1vw;  color:black;"><b>Hospitals, hospices, care homes and other facilities</b></p>
+          <p style="font-size:1vw;  color:black;">You cannot smoke or vape cannabis:</p>
+          <ui style="font-size:1vw;  color:black;">
                 <li>within 9 metres from the entrance or exit of hospitals (public and private), psychiatric facilities, long-term care homes, independent health facilities</li>
                 <li>on outdoor grounds of hospitals (public and private) and psychiatric facilities</li>
                 <li>in non-controlled areas in long-term care homes, certain retirement homes, provincially-funded supportive housing, designated psychiatric or veterans’ facilities, and residential hospices</li>
           </ui>
           <br>
-          <h6><b>Publicly owned spaces</b></h6>
-          <h6>You cannot smoke or vape cannabis in publicly-owned sport fields (not including golf courses), nearby spectator areas and public areas within 20 metres of these areas.</h6>
+          <p style="font-size:1vw;  color:black;"><b>Publicly owned spaces</b></p>
+          <p style="font-size:1vw;  color:black;">You cannot smoke or vape cannabis in publicly-owned sport fields (not including golf courses), nearby spectator areas and public areas within 20 metres of these areas.</p>
 
-          <h6><b>Vehicles and boats</b></h6>
-          <h6>You cannot consume cannabis (smoking, vaping and eating) in a vehicle or boat that is being driven or will be driven.</h6>
+          <p style="font-size:1vw;  color:black;"><b>Vehicles and boats</b></p>
+          <p style="font-size:1vw;  color:black;">You cannot consume cannabis (smoking, vaping and eating) in a vehicle or boat that is being driven or will be driven.</p>
           <br>
-          <h6>You cannot smoke or vape cannabis:</h6>
-          <ui>
+          <p style="font-size:1vw;  color:black;">You cannot smoke or vape cannabis:</p>
+          <ui style="font-size:1vw;  color:black;">
                 <li>in restaurants and on bar patios and public areas within 9 metres of a patio</li>
                 <li>on outdoor grounds of specified Ontario government office buildings</li>
                 <li>in reserved seating areas at outdoor sports and entertainment locations</li>
@@ -230,12 +241,12 @@
           </ui>
 
         </div><div style="float: left;  width: 50%;  padding: 60px;  height: 300px;">
-            <h6>You are able to have a maximum of 30 grams (about one ounce) of dried cannabis (or equivalent) in public at any time.</h6>
-            <h6>Medical cannabis is subject to different rules than recreational cannabis. The production and sale of medical cannabis is regulated exclusively by the federal 
-            government. Under the new regulations there are improvements for patients accessing cannabis for medical purposes from federally licensed sellers.</h6>
+            <p style="font-size:1vw;  color:black;">You are able to have a maximum of 30 grams (about one ounce) of dried cannabis (or equivalent) in public at any time.</p>
+            <p style="font-size:1vw;  color:black;">Medical cannabis is subject to different rules than recreational cannabis. The production and sale of medical cannabis is regulated exclusively by the federal 
+            government. Under the new regulations there are improvements for patients accessing cannabis for medical purposes from federally licensed sellers.</p>
             <br><br>
-            <h6><b>These improvements include:</b></h6>
-            <ui>
+            <p style="font-size:1vw;  color:black;"><b>These improvements include:</b></p>
+            <ui style="font-size:1vw;  color:black;">
                 <li>the ability to request the return of their medical document from a federally licensed seller</li>
                 <li>the ability to request the transfer of their medical document to a different federally licensed seller</li>
                 <li>that the effective date on the registration document will be the day it is issued, rather than the day the medical document was signed by the health care provider</li>
@@ -248,7 +259,7 @@
                 <li>an increased availability of a range of products</li>
             </ui>
             </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- Law End -->
 <!--
 <div class="testimonials-wrap" id="testimonials">
@@ -426,7 +437,9 @@
             <li>
               <div class="contact_box">
                 <div class="icon"> <img src="images/adress.png" alt=""> </div>
-                <p>Main Office <span>71 King St #201, St. Catharines, ON</span></p>
+                <p>Main Office <span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></span></p>
               </div>
             </li>
             <li>
@@ -509,12 +522,12 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="footer_logo"><img class="footer-default" src="images/atlantalawyes_logo_white.png" alt=""></div>
-        <p style="font-size:20px">Browne & Associates Legal Services<br><br><br><br><br></p>
+        <p style="font-size:20px"><a href="https://browneandassociates.ca/" style="color:white">Browne & Associates Legal Services</a><br><br><br><br><br></p>
         <ul class="unorderList social_media">
-          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>     -->
+<!--          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>        -->
+          <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>      -->
         </ul>
       </div>
       <div class="col-lg-2 col-md-6">
@@ -522,12 +535,12 @@
         <ul class="footer-links">
           <li> <a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#practice">Practice Areas</a></li>
-          <li><a href="#.">FAQs </a></li>
+          <li><a href="practicearea.html">Practice Areas</a></li>
+<!--          <li><a href="#.">FAQs </a></li>-->
           <li><a href="contact.html">Contact </a></li>
         </ul>
       </div>
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6"><!--
         <h3>Instagram</h3>
         <ul class="unorderList insta_pics">
           <li><img src="images/insta01.png" alt=""></li>
@@ -537,6 +550,7 @@
           <li><img src="images/insta05.png" alt=""></li>
           <li><img src="images/insta06.jpg" alt=""></li>
         </ul>
+      -->
       </div>
       <div class="col-lg-3 col-md-12">
         <h3>Opening Hours</h3>
