--- a/highway-traffic-act-and-cvor.html
+++ b/highway-traffic-act-and-cvor.html
@@ -20,6 +20,15 @@
 <link href="css/style.css" rel="stylesheet"  id="colors">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <title>David A. Reid Paralegal Associate Browne & Associates Legal Services</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9NELGGVBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H9NELGGVBY');
+</script>
 </head>
 <body>
 
@@ -28,15 +37,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <p><i class="fas fa-envelope"></i> david@browneandassociates.ca</p>
+        <p><i class="fas fa-envelope"></i><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;"> david@browneandassociates.ca</a></p>
       </div>
       <div class="col-lg-6 col-md-6">
         <div class="social-media"> <span>Follow Us:</span>
           <ul>
-            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>       --> 
+<!--            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>          --> 
+            <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>        --> 
           </ul>
         </div>
       </div>
@@ -60,7 +69,9 @@
               <div class="conInfo phonewrp"><span>Call Us Now</span> <a href="tel:9056885598">(905) 688-5598</a></div>
             </li>
             <li>
-              <div class="conInfo addressWrp"><span>Address</span> 71 King St #201, St. Catharines, ON</div>
+              <div class="conInfo addressWrp"><span>Address</span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></div>
             </li>
           </ul>
         </div>
@@ -79,7 +90,7 @@
               -->
               <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
-            <div class="quote-btn"><a href="#">Get A Quote</a></div>
+            <div class="quote-btn"><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;">Get A Quote</a></div>
           </div>
         </nav>
       </div>
@@ -155,19 +166,23 @@
     <div class="row">
       <div class="col-lg-6 offset-6">
         <div class="law_box">
-          <h1><b><u>HTA Highway Traffic Act:</u></b></h1>
-          <p>You may think that you can just pay your traffic violation and it will go away. This is not entirely true. There are other things to take into consideration, such as your 
-          demerit points on your driving record and a rise in your insurance premiums. Pleading guilty, or bad plea-bargaining can affect your car insurance and your driving record for 
-          years to come. Fight to keep your driving record clean. </p>
-          <br>
-          <h1><b><u>CVOR Commercial Vehicle Operators Registration:</u></b></h1>
-          <p>Here at Reid Paralegal i understand that challenging a ticket can be lengthy, trying and puzzling. That is why I treat every traffic infringement case as exclusive and offer 
-          my expert and specialized services to aid in relieving those stresses. While violations such as unsafe loads, log book violations, improper pre-trip inspections may not lead to 
-          incarceration, but paying the fine is the same as confessing guilt. This will result in CVOR points on your driving record and with enough points accumulated your company could 
-          potentially loose there CVOR which then would lead to lose of employment therefore it is in your best interest to have D. Reid Paralegal help fight your ticket.</p>
-          <br>
-          <p><b>For that reason, I can handle the entire ticket for you:</b></p>
-          <ul class="tick">
+          <div class="title">
+              <h1><u>HTA Highway Traffic Act:</u></h1>
+          </div>
+            <p>You may think that you can just pay your traffic violation and it will go away. This is not entirely true. There are other things to take into consideration, such as your 
+            demerit points on your driving record and a rise in your insurance premiums. Pleading guilty, or bad plea-bargaining can affect your car insurance and your driving record for 
+            years to come. Fight to keep your driving record clean. </p>
+            <br>
+          <div class="title">
+            <h1><u>CVOR Commercial Vehicle Operators Registration:</u></h1>
+          </div>
+            <p>Here at Reid Paralegal i understand that challenging a ticket can be lengthy, trying and puzzling. That is why I treat every traffic infringement case as exclusive and offer 
+            my expert and specialized services to aid in relieving those stresses. While violations such as unsafe loads, log book violations, improper pre-trip inspections may not lead to 
+            incarceration, but paying the fine is the same as confessing guilt. This will result in CVOR points on your driving record and with enough points accumulated your company could 
+            potentially loose there CVOR which then would lead to lose of employment therefore it is in your best interest to have D. Reid Paralegal help fight your ticket.</p>
+            <br>
+            <p><b>For that reason, I can handle the entire ticket for you:</b></p>
+            <ul class="tick">
             <li>The filing of the ticket.</li>
             <li>All correspondence.</li>
             <li>Requesting disclosure.</li>
@@ -176,6 +191,7 @@
             <li>Load Security.</li>
             <li>Log Book.</li>
             <li>Over Weight.</li>
+            
           </ul>
         </div>
       </div>
@@ -360,7 +376,9 @@
             <li>
               <div class="contact_box">
                 <div class="icon"> <img src="images/adress.png" alt=""> </div>
-                <p>Main Office <span>71 King St #201, St. Catharines, ON</span></p>
+                <p>Main Office <span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></span></p>
               </div>
             </li>
             <li>
@@ -443,12 +461,12 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="footer_logo"><img class="footer-default" src="images/atlantalawyes_logo_white.png" alt=""></div>
-        <p style="font-size:20px">Browne & Associates Legal Services<br><br><br><br><br></p>
+        <p style="font-size:20px"><a href="https://browneandassociates.ca/" style="color:white">Browne & Associates Legal Services</a><br><br><br><br><br></p>
         <ul class="unorderList social_media">
-          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>     -->
+<!--          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>        -->
+          <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>      -->
         </ul>
       </div>
       <div class="col-lg-2 col-md-6">
@@ -456,12 +474,12 @@
         <ul class="footer-links">
           <li> <a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#practice">Practice Areas</a></li>
-          <li><a href="#.">FAQs </a></li>
+          <li><a href="practicearea.html">Practice Areas</a></li>
+<!--          <li><a href="#.">FAQs </a></li>-->
           <li><a href="contact.html">Contact </a></li>
         </ul>
       </div>
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6"><!--
         <h3>Instagram</h3>
         <ul class="unorderList insta_pics">
           <li><img src="images/insta01.png" alt=""></li>
@@ -471,7 +489,8 @@
           <li><img src="images/insta05.png" alt=""></li>
           <li><img src="images/insta06.jpg" alt=""></li>
         </ul>
-      </div>
+      -->
+       </div>
       <div class="col-lg-3 col-md-12">
         <h3>Opening Hours</h3>
         <ul class="unorderList hourswrp">
