--- a/tort.html
+++ b/tort.html
@@ -20,6 +20,15 @@
 <link href="css/style.css" rel="stylesheet"  id="colors">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <title>David A. Reid Paralegal Associate Browne & Associates Legal Services</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9NELGGVBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H9NELGGVBY');
+</script>
 </head>
 <body>
 
@@ -28,15 +37,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <p><i class="fas fa-envelope"></i> david@browneandassociates.ca</p>
+        <p><i class="fas fa-envelope"></i><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;"> david@browneandassociates.ca</a></p>
       </div>
       <div class="col-lg-6 col-md-6">
         <div class="social-media"> <span>Follow Us:</span>
           <ul>
-            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>       --> 
+<!--            <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>          --> 
+            <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--            <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>        --> 
           </ul>
         </div>
       </div>
@@ -60,7 +69,9 @@
               <div class="conInfo phonewrp"><span>Call Us Now</span> <a href="tel:9056885598">(905) 688-5598</a></div>
             </li>
             <li>
-              <div class="conInfo addressWrp"><span>Address</span> 71 King St #201, St. Catharines, ON</div>
+              <div class="conInfo addressWrp"><span>Address</span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></div>
             </li>
           </ul>
         </div>
@@ -79,7 +90,7 @@
               -->
               <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
-            <div class="quote-btn"><a href="#">Get A Quote</a></div>
+            <div class="quote-btn"><a href="mailto:david@browneandassociates.ca" style="color:#ffffff;">Get A Quote</a></div>
           </div>
         </nav>
       </div>
@@ -351,7 +362,9 @@
             <li>
               <div class="contact_box">
                 <div class="icon"> <img src="images/adress.png" alt=""> </div>
-                <p>Main Office <span>71 King St #201, St. Catharines, ON</span></p>
+                <p>Main Office <span><a href="
+              https://www.google.com/maps/dir//71+King+St+%23201,+St.+Catharines,+ON+L2R+3H7/@43.1286093,-79.298934,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89d351b294c601f7:0xd0cc4bcbadaf9e18!2m2!1d-79.2467682!2d43.1584096!3e0">
+              71 King St #201, St. Catharines, ON</a></span></p>
               </div>
             </li>
             <li>
@@ -434,12 +447,12 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="footer_logo"><img class="footer-default" src="images/atlantalawyes_logo_white.png" alt=""></div>
-        <p style="font-size:20px">Browne & Associates Legal Services<br><br><br><br><br></p>
+        <p style="font-size:20px"><a href="https://browneandassociates.ca/" style="color:white">Browne & Associates Legal Services</a><br><br><br><br><br></p>
         <ul class="unorderList social_media">
-          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>     -->
+<!--          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>        -->
+          <li><a href="https://www.linkedin.com/in/david-reid-4455121a5/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+<!--          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>      -->
         </ul>
       </div>
       <div class="col-lg-2 col-md-6">
@@ -447,12 +460,12 @@
         <ul class="footer-links">
           <li> <a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#practice">Practice Areas</a></li>
-          <li><a href="#.">FAQs </a></li>
+          <li><a href="practicearea.html">Practice Areas</a></li>
+<!--          <li><a href="#.">FAQs </a></li>-->
           <li><a href="contact.html">Contact </a></li>
         </ul>
       </div>
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6"><!--
         <h3>Instagram</h3>
         <ul class="unorderList insta_pics">
           <li><img src="images/insta01.png" alt=""></li>
@@ -462,6 +475,7 @@
           <li><img src="images/insta05.png" alt=""></li>
           <li><img src="images/insta06.jpg" alt=""></li>
         </ul>
+      -->
       </div>
       <div class="col-lg-3 col-md-12">
         <h3>Opening Hours</h3>
