--- a/before-administrative-tribunals.html
+++ b/before-administrative-tribunals.html
@@ -19,7 +19,11 @@
 <link rel="stylesheet" href="rs-plugin/css/settings.css">
 <link href="css/style.css" rel="stylesheet"  id="colors">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<title>David A. Reid Paralegal Associate Browne & Associates Legal Services</title>
+<title>Administration Tribunals - David A. Reid Paralegal Associate Browne & Associates Legal Services</title>
+
+        <meta name="keywords" content="david reid, paralegal, paralegal near me, paralegal st cathrines, legal services, legal services near me, legal services st cathrines,
+        browne and associates, administration tribunals, administration tribunals near me, administration tribunals st cathrines, before administration tribunals, before administration tribunals near me,
+        before administration tribunals st cathrines,">
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9NELGGVBY"></script>
 <script>
